@@ -46,7 +46,7 @@ class TopicSubscriptionInterceptorTest extends AbstractSpringIntegrationIndepend
 
         var exam = examUtilService.addExam(course);
         exam = examUtilService.addExerciseGroupsAndExercisesToExam(exam, false);
-        var examExercise = exam.getExerciseGroups().get(0).getExercises().stream().findFirst().orElseThrow();
+        var examExercise = exam.getExerciseGroups().getFirst().getExercises().stream().findFirst().orElseThrow();
 
         var interceptor = websocketConfiguration.new TopicSubscriptionInterceptor();
         var msgMock = (Message<String>) mock(Message.class);
